--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="./lib/js/es6-promise.js"></script>
   <script src="./lib/js/Sortable.min.js"></script>
   <!--Dev SDK-->
-  <script src="https://cdn.ronghub.com/RongIMLib-2.10.1.prod.js"></script>
+  <script src="https://cdn.ronghub.com/RongIMLib-v2-Adapter-5.7.2.prod.js"></script>
   <script src="./config.js"></script>
   <script src="./js/common/utils.js"></script>
   <script src="./js/common/service.js"></script>
